# gstreamer-example

applications/: README.md
element-template/: Makefile  generator.py  meson.build  template.c  template.h
gst-my-video-flip/: Makefile  README.md  gstmyvideoflip.c  gstmyvideoflip.h  meson.build
gst-simple-isp/: gstsimpleisp.cpp  meson.build
plugins/: README.md
plugins/gst-simple-isp/: Makefile  gstsimpleisp.h  isp.cpp  template.json
template-gen/: README.md
template-gen/element-template/: Makefile  template.c  template.json
template-gen/video-filter-template/: Makefile  README.md  template.c
video-filter-template/: Makefile  generator.py  meson.build  template.h
